RESOLVED FIXED186350
Wrong NSVisualEffectMaterial used for exit full screen overlay in dark mode
https://bugs.webkit.org/show_bug.cgi?id=186350
Summary Wrong NSVisualEffectMaterial used for exit full screen overlay in dark mode
Timothy Hatcher
Reported 2018-06-06 08:26:05 PDT
The material is used. It needs to be one of the new semantic materials to work in dark mode.
Attachments
Patch (2.04 KB, patch)
2018-06-06 08:28 PDT, Timothy Hatcher
no flags
Patch (2.04 KB, patch)
2018-06-06 08:36 PDT, Timothy Hatcher
no flags
Timothy Hatcher
Comment 1 2018-06-06 08:26:14 PDT
Timothy Hatcher
Comment 2 2018-06-06 08:28:39 PDT
Timothy Hatcher
Comment 3 2018-06-06 08:36:40 PDT
WebKit Commit Bot
Comment 4 2018-06-06 09:42:11 PDT
Comment on attachment 342048 [details] Patch Clearing flags on attachment: 342048 Committed r232546: <https://trac.webkit.org/changeset/232546>
WebKit Commit Bot
Comment 5 2018-06-06 09:42:12 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.