Wrong NSVisualEffectMaterial used for exit full screen overlay in dark mode.

https://bugs.webkit.org/show_bug.cgi?id=186350
rdar://problem/39135535

Reviewed by Anders Carlsson.

* platform/mac/WebCoreFullScreenPlaceholderView.mm:
(-[WebCoreFullScreenPlaceholderView initWithFrame:]):
Use the NSVisualEffectMaterialFullScreenUI on macOS 10.14 and don't
set an explicit NSAppearance.


Canonical link: https://commits.webkit.org/201727@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@232546 268f45cc-cd09-0410-ab3c-d52691b4dbfc